# opspilot-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/core/: config.py
app/graph/: nodes.py  nodes_llm.py  workflow.py  workflow_agentic_llm.py  workflow_baseline.py
app/rag/: chunker.py  document_loader.py  retriever.py
app/schemas/: api.py  domain.py  llm_outputs.py  rag.py  requests.py  responses.py  run_logs.py  state.py  tool_outputs.py
app/services/: llm.py  run_logger.py  simple_rag.py
app/tools/: customer_tools.py  retrieval_tools.py  sla_tools.py  ticket_tools.py
data/: mock_customers.json
data/internal_docs/: billing_policy.md  escalation_matrix.md  premium_customer_sla.md  refund_policy.md  technical_outage_guide.md
evals/: compare_openai_30case.py  compare_results.py  dataset.jsonl  dataset_10case_smoke.jsonl  run_eval.py
evals/results/: agentic_llm_openai_30case_results.json  agentic_llm_results.json  baseline_results.json  comparison_report.md  openai_30case_report.md  simple_rag_openai_30case_results.json  simple_rag_results.json
tests/: test_api.py  test_health.py  test_llm_service.py  test_logging.py  test_rag.py  test_schemas.py  test_simple_rag.py  test_tools.py  test_workflow.py  test_workflow_agentic_llm.py
